@@ -1,3 +1,5 @@
+HEAD
+	+ Added localAddr and lport properties for internal VPN clients
 2.0.8
 	+ Added server option for multihomed UDP server
 2.0.7
